--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,51 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Monitoreo AC - Sistema de Monitoreo de Aires Acondicionados</title>
+
+     <meta
+      name="description"
+      content="Monitoree eficientemente el estado y la temperatura de sus aires acondicionados en tiempo real. Optimice el consumo energético y prevenga fallos con nuestro sistema de alertas."
+    />
+
+    <meta
+      name="keywords"
+      content="monitoreo aires acondicionados, control temperatura AC, gestión energética, climatización, IoT, sensores temperatura, sistema de alertas AC, eficiencia energética"
+    />
+
+    <!-- Autor o Propietario del sitio -->
+    <meta name="author" content="Edgar Diaz, GRID MAD DATA" /> 
+
+    <!-- Robots Meta Tag -->
+    <!-- Indica a los crawlers si deben indexar la página y seguir los enlaces. 'index, follow' es el valor por defecto, pero es bueno ser explícito. -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <!-- Ayuda a prevenir problemas de contenido duplicado indicando cuál es la URL "oficial" de esta página. -->
+    <link rel="canonical" href="[URL Completa y Oficial de esta Página]" /> <!-- Reemplaza esto -->
+
+    <!-- Open Graph Tags (para Redes Sociales como Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Monitoreo AC - Sistema de Monitoreo de Aires Acondicionados" />
+    <meta property="og:description" content="Monitoree eficientemente el estado y la temperatura de sus aires acondicionados en tiempo real. Optimice el consumo energético y prevenga fallos." />
+    <meta property="og:type" content="website" /> <!-- 'website' para la página principal, 'article' para artículos, etc. -->
+    <meta property="og:url" content="[URL Completa y Oficial de esta Página]" /> <!-- Reemplaza esto -->
+    <meta property="og:image" content="./public/mad_data.png" /> <!-- Reemplaza esto -->
+    <meta property="og:locale" content="es_ES" /> <!-- O es_MX, es_AR, etc., según tu público principal -->
+    <meta property="og:site_name" content="Monitoreo AC" /> <!-- Nombre de tu sitio/aplicación -->
+
+    <!-- Twitter Card Tags (para mostrar bien en Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" /> <!-- 'summary_large_image' si tienes una buena imagen, sino 'summary' -->
+    <meta name="twitter:title" content="Monitoreo AC - Sistema de Monitoreo de Aires Acondicionados" />
+    <meta name="twitter:description" content="Monitoree eficientemente el estado y la temperatura de sus aires acondicionados en tiempo real. Optimice el consumo energético y prevenga fallos." />
+    <meta name="twitter:image" content="[URL a la misma imagen representativa que usaste en og:image]" /> <!-- Reemplaza esto -->
+    <!-- Opcional: Si tienes una cuenta de Twitter para el sitio/empresa -->
+    <!-- <meta name="twitter:site" content="@TuUsuarioTwitter"> --> <!-- Reemplaza esto -->
+
+    <!-- Theme Color (para navegadores móviles) -->
+    <!-- Define un color para la barra de herramientas del navegador en móviles -->
+    <meta name="theme-color" content="#FFFFFF" /> <!-- Reemplaza #FFFFFF con un color de tu marca -->
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
